# skill_transfer

./: .gitignore  LICENSE  LICENSE.txt  README.md  force_x.txt  force_y.txt  force_z.txt  knowledge_graph.py  main.py  prompt.txt  requirements.txt  test.py  开抽屉和开门prompt.docx
A_star planning/: force_z.txt  motion_planning_v2.py  tutorial.ipynb
Controlled_trials/: Evaluate.py  demo_stable_baslinse3.py  force_y.txt  main_v3.py  motion_planning_v1.py  open_cabinet_to_open_door_step2.py  sawyer_door_v2.py
Deep_Learning/shufflenet_2/: Draw_Heat_Map.py  Grad_CAM.py  Spider.py  class_indices.json  model.py  my_dataset.py  plt.py  predict.py  renanme.py  train.py  utils.py
Hierarchical transfer of skills/A_star planning/: main.py
Hierarchical_transfer_of_skills/: subtask sequence transfer.md
Hierarchical_transfer_of_skills/Physical_level_tactile_transfer/tac3d/tac3d/: gs3drecon.py  image_boundary.py  initial.py  listener.py  package.xml  setup.cfg  setup.py  texture.py
Hierarchical_transfer_of_skills/Physical_level_tactile_transfer/tac3d/tac3d/tac3d/: image_flow.py  orientation_publisher.py  pose_planning_node.py
Hierarchical_transfer_of_skills/skill_library/: cabinet.xml  door.xml  hammer_place_v2.py  knowledge_graph.py
Hierarchical_transfer_of_skills/trajectory_transfer/: main.py  motion_planning.py
MountainCar/: case_base.npy
MountainCar/CBR_MountainCar/: learning.py
MountainCar/GAME-main/: requirements.txt
MountainCar/mountaincar_CBR/: CBR+PGPE仿真报告-v2.0.docx  DQN.py  GUI_design.py  PGPE强化学习mountaincar总结 .docx  READ_ME.txt  main.py  main_PPR.py  mountain_car.py  mountain_car_3D.py  mountaincar交互界面控制手册.docx  test.py  test_contrast.py
PI2-DMPs-main/: PI2Learning.py  dmp.py
envs/robosuite-task-zoo/: .gitignore  demo.py  environments.md  setup.py
experiments/RL_direct_transfer/: Evaluate.py  RL_open_cabinet.py  RL_open_door.py
skill_library/: knowledge_graph.py
task_reasoning/: RIMER_inference.py  controller.py  test.py  tracjroy.py
task_reasoning/A_star planning/: force_x.txt  force_y.txt  force_z.txt  main_v2.py  main_v3.py  motion_planning.py  motion_planning_v2.py  motion_planning_v3.py  sub_motion_plainning.py  test.py  (+1 more)
test/: debugging.txt
(+78 files in other folders)
